# mcp-push

./: .gitignore  CLAUDE.md  Claude Code Hooks 完整指南.md  INTEGRATION_GUIDE.md  README.md  README_CN.md  completion-hook-linux.sh  install-hook.sh  mcp-call.py  notify.py  package-lock.json  package.json  prompt.json  pyproject.toml  sendNotify.js  server.py  start-mcp-server.sh  start_worker.py  stop-hook-config.json  test-hook-integration.py  test_integration.py  test_mcp_push.py  uninstall-hook.sh  verify_prompt.js  提示词.json
apps/mcp-server/: package.json
apps/mcp-server/src/: index.ts  server.ts
apps/mcp-server/src/bridge/: pythonProc.ts
docs/: CHANNEL_CONFIG.md  MCP_INTEGRATION.md  MIGRATION.md  RUNNER_HOOK_README.md  RUNNER_INTEGRATION.md  USAGE_EXAMPLES.md  index_cn.html
examples/: claude-code-hook-example.json
scripts/: agent-runner-integration.ts  completion-hook-runner.ts  completion-hook.sh  notify-cli.js  runner-completion-hook.ts
src/: notify.py  server.py
tools/pytools/src/pytools/: __init__.py  dispatcher.py  notify_lib.py  worker.py
