[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-push"
version = "1.0.0"
description = "MCP notification bridge"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["requests>=2.31.0"]

[project.scripts]
mcp-push = "src.server:main"

[tool.setuptools]
packages = ["src"]
